I#598 - EShellSwitcher: Runtime warnings about negative content height

Closes https://gitlab.gnome.org/GNOME/evolution/issues/598